<resources>
    <string name="app_name">SocialApp</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="insert_description">insert description</string>
    <string name="enter_title">enter title</string>
    <string name="location">Location</string>
    <string name="save_meeting">Save meeting</string>
    <string name="insert_name">insert name</string>
    <string name="insert_phone">insert phone</string>
    <string name="insert_email">insert email</string>
    <string name="insert_quantity">insert quantity</string>
    <string name="add_attendance">Add attendance</string>
    <string name="save_item">Save Item</string>
    <string name="add_selected_items">add selected items</string>
    <string name="textview">TextView</string>
    <string name="add_date">Add date</string>
    <string name="add_item">Add item</string>
    <string name="take_item">Take Item</string>
    <string name="my_items">My items</string>
    <string name="add_location">add location</string>
    <string name="title_activity_maps">Map</string>
</resources>
