<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mettingCard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.ushtinfeld.socialapp.MeetingCard"
    tools:layout_editor_absoluteY="25dp">

    <EditText
        android:id="@+id/TitleTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="54dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/enter_title"
        android:inputType="textPersonName"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/locationTxt"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/descriptionTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/insert_description"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleTxt" />

    <EditText
        android:id="@+id/locationTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:ems="10"
        android:hint="@string/location"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/InsertDate"
        app:layout_constraintEnd_toStartOf="@+id/InsertDate"
        app:layout_constraintStart_toStartOf="@+id/InsertDate"
        app:layout_constraintTop_toBottomOf="@+id/TitleTxt" />

    <Button
        android:id="@+id/InsertDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:layout_weight="0.5"
        android:text="@string/add_date"
        app:layout_constraintBottom_toTopOf="@+id/saveMeetingBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/DateAndTime"
        app:layout_constraintTop_toBottomOf="@+id/locationTxt" />

    <Button
        android:id="@+id/saveMeetingBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/colorOK"
        android:text="@string/save_meeting"
        app:layout_constraintBottom_toTopOf="@+id/MyItemTitle"
        app:layout_constraintEnd_toStartOf="@+id/InsertDate"
        app:layout_constraintStart_toStartOf="@+id/InsertDate"
        app:layout_constraintTop_toBottomOf="@+id/InsertDate" />

    <ListView
        android:id="@+id/listViewItem"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="13dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MyItemTitle" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fabMeetCard"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintStart_toEndOf="@+id/TitleTxt"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/DateAndTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_weight="0.5"
        app:layout_constraintBottom_toBottomOf="@+id/InsertDate"
        app:layout_constraintEnd_toStartOf="@+id/InsertDate"
        app:layout_constraintStart_toStartOf="parent" />

    <com.w9jds.FloatingActionMenu
        android:id="@+id/fabMeetCard"
        style="@style/FabStyle"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="16dp"
        app:base_background="@color/colorRed"
        app:base_marginBottom="8dp"
        app:base_marginEnd="8dp"
        app:base_src="@drawable/ic_action_new"
        app:item_spacing="16dp"
        app:label_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/listViewItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/listViewItem"
        app:overlay_color="#66000000">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/addAttend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/add_attendance"
            android:src="@drawable/attendance"
            app:backgroundTint="@android:color/white" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/addItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/add_item"
            android:src="@drawable/item"
            app:backgroundTint="@android:color/white" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabTakeItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/take_item"
            android:src="@drawable/take_item"
            app:backgroundTint="@android:color/white" />
    </com.w9jds.FloatingActionMenu>

    <TextView
        android:text="@string/my_items"
        android:id="@+id/MyItemTitle"
        android:textAlignment="center"
        android:layout_width="174dp"
        android:layout_height="23dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginBottom="12dp"
        android:layout_weight="0.5"
        app:layout_constraintBottom_toTopOf="@+id/listViewItem"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveMeetingBtn" />
</android.support.constraint.ConstraintLayout>
