<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.example.ushtinfeld.socialapp.AddItem">

<TextView
    android:id="@+id/meetingItemTxt"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:textAlignment="center"
    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<EditText
    android:id="@+id/ItemNameTxt"
    android:layout_width="match_parent"
    android:layout_height="49dp"
    android:layout_marginTop="16dp"
    android:ems="10"
    android:hint="@string/insert_name"
    android:inputType="textAutoComplete"
    android:textSize="24sp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/meetingItemTxt" />

<EditText
    android:id="@+id/ItemQtyTxt"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:ems="10"

    android:hint="@string/insert_quantity"
    android:inputType="text"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/ItemNameTxt" />

<Button
    android:id="@+id/saveItemBtn"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/save_meeting"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/ItemQtyTxt" />

<ListView
    android:id="@+id/listViewItem"
    android:layout_width="0dp"
    android:layout_height="587dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/saveItemBtn" />
</android.support.constraint.ConstraintLayout>
